# glaze

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .packit.yml  CMakeLists.txt  CMakePresets.json  CORS_PREFLIGHT_FEATURE.md  LICENSE  LICENSE.txt  README.md  RELEASE_v6.4.1.md  conanfile.py  cors-preflight-solution.md  csv_test_colwise.csv  csv_test_rowwise.csv  mkdocs.yml  ordered_map_results.md  pr_description.md
benchmarks/: CMakeLists.txt  binary_search_benchmark.cpp  flat_ingest_single.cpp  float_write_benchmark.cpp  generic_benchmark.cpp  ip_address_validation_benchmark.cpp  lazy_benchmark.cpp  lazy_load_benchmark.cpp  lazy_load_common.hpp  lazy_load_scalar.cpp  ordered_map_benchmark.cpp  ordered_map_memory.cpp  prettify_benchmark.cpp  simple_float_benchmark.cpp  skip_ws_benchmark.cpp  string_write_benchmark.cpp  string_write_no_simd.cpp  string_write_no_simd.hpp  utf8_benchmark.cpp
benchmarks/http_benchmark/: CMakeLists.txt  http_benchmark.cpp
benchmarks/ws_benchmark/: CMakeLists.txt  ws_benchmark.cpp
examples/: CMakeLists.txt  json-rpc.cpp  repe-jsonrpc-conversion.cpp  wrapping_middleware_example.cpp
fuzzing/: CMakeLists.txt  binary_reflection.cpp  build_and_run_fuzzers.sh  cbor_reflection.cpp  cbor_roundtrip_floating.cpp  cbor_roundtrip_int.cpp  cbor_roundtrip_string.cpp  csv_parsing.cpp  json_exhaustive_roundtrip_float.cpp  json_exhaustive_roundtrip_int.cpp  json_generic.cpp  json_jmespath.cpp  json_minify.cpp  json_prettify.cpp  json_reflection.cpp  json_roundtrip_floating.cpp  json_roundtrip_int.cpp  json_roundtrip_string.cpp  json_with_comments.cpp  jsonb_reflection.cpp  main.cpp  minimize_and_cleanse.sh  msgpack_reflection.cpp  msgpack_roundtrip_floating.cpp  msgpack_roundtrip_int.cpp  msgpack_roundtrip_string.cpp  ossfuzz.sh
fuzzing/quickfuzz/: run_all.sh  run_single.sh
src/interop/: CMakeLists.txt  client.cpp  glaze.cpp  i_glaze.cpp  interop.cpp
tests/: CMakeLists.txt  ut-guide.md
tests/api_test/: CMakeLists.txt  api_test.cpp  main.cpp
tests/asio_repe/: CMakeLists.txt  asio_repe.cpp
tests/base_tests/: CMakeLists.txt  main.cpp
tests/beve_test/: CMakeLists.txt  beve_test.cpp  lazy_beve_test.cpp  skip_null_on_read_test.cpp
tests/binary_rpc/: CMakeLists.txt  binary_rpc.cpp
tests/binary_test/: CMakeLists.txt  binary_test.cpp  main.cpp
tests/bson_test/: CMakeLists.txt  bson_test.cpp
tests/buffer_pool_test/: CMakeLists.txt  buffer_pool_test.cpp
tests/cbor_test/: CMakeLists.txt  cbor_test.cpp
tests/chrono_test/: CMakeLists.txt  chrono_test.cpp
tests/cli_args_test/: CMakeLists.txt  cli_args_test.cpp
tests/cli_menu_test/: CMakeLists.txt  cli_menu_test.cpp
tests/compare_test/: CMakeLists.txt  compare_test.cpp
tests/coroutine_test/: CMakeLists.txt  coroutine_test.cpp
tests/csv_test/: CMakeLists.txt  csv_bounded_buffer_test.cpp  csv_test.cpp  currency.csv  kf-data.csv  main.cpp
tests/developer_tools_test/: CMakeLists.txt  developer_tools_test.cpp
tests/eetf_test/: CMakeLists.txt  eetf_test.cpp
tests/eigen_test/: CMakeLists.txt  eigen_test.cpp  main.cpp
tests/eigen_tests/: CMakeLists.txt  main.cpp
tests/example_json/: CMakeLists.txt  example_json.cpp
tests/exceptions_test/: CMakeLists.txt  exceptions_test.cpp
tests/find_package/: .gitignore  CMakeLists.txt
tests/float_write_test/: CMakeLists.txt  float_write_test.cpp
tests/gcc_json_t_issue/: CMakeLists.txt  gcc_json_t_issue.cpp  unused.cpp
tests/https_test/: CMakeLists.txt  generate_certs.sh  https_test.cpp
tests/inplace_vector/: CMakeLists.txt  inplace_vector_noexcept.cpp  inplace_vector_test.cpp
tests/int_parsing/: CMakeLists.txt  int_parsing.cpp
tests/interop/: CMakeLists.txt  interop_basic_test.cpp  interop_complex_test.cpp  interop_member_function_test.cpp  interop_optional_test.cpp  interop_performance_test.cpp  interop_plugins_test.cpp  interop_structures_test.cpp  interop_variant_struct_test.cpp  interop_variant_test.cpp  interop_zero_copy_test.cpp  test_c_ffi.c  test_consolidation_summary.cpp  test_interop_core.cpp  test_interop_plugins.cpp  test_plugin_complex_structures.cpp  test_plugin_minimal.cpp  test_plugin_simple.cpp
tests/istream_buffer_test/: CMakeLists.txt  istream_buffer_test.cpp
tests/jmespath/: CMakeLists.txt  jmespath.cpp
tests/json_conformance/: CMakeLists.txt  json_conformance.cpp
tests/json_performance/: CMakeLists.txt  benchmark_compare_optimization.cpp  json_perf_benchmark.cpp  json_perf_common.hpp  json_perf_common.ixx  json_perf_discord.cpp  json_perf_numbers.cpp  json_perf_objects.cpp  json_perf_strings.cpp  json_performance.cpp  space_prefill_benchmark.cpp
tests/json_reflection_test/: CMakeLists.txt  front_hash_test.cpp  json_reflection_test.cpp
tests/json_test/: CMakeLists.txt  allocate_raw_pointers_test.cpp  byte_array_test.cpp  final_span_integration_test.cpp  generic_int64_test.cpp  generic_int_test.cpp  generic_pmr_test.cpp  generic_test.cpp  indexed_rename_key_test.cpp  json_merge_patch_test.cpp  json_patch_test.cpp  json_t_test.cpp  json_test.cpp  json_test_shared_types.hpp  json_test_shared_types.ixx  json_variant_support_test.cpp  jsonrpc_test.cpp  jsonschema_test.cpp  lazy_test.cpp  linear_search_test.cpp  main.cpp  non_aggregate_reflection_test.cpp  nullable_lambda_test.cpp  skip_default_members_test.cpp  skip_null_on_read_test.cpp  snprintf_fallback_test.cpp  std_tuple_protocol_test.cpp  u8string_test.cpp  value_based_skip_test.cpp  variant_ambiguous_test.cpp
tests/jsonb_sqlite_test/: CMakeLists.txt  jsonb_sqlite_test.cpp
tests/jsonb_test/: CMakeLists.txt  jsonb_test.cpp
tests/jsonrpc_test/: CMakeLists.txt  jsonrpc_test.cpp
tests/key_transformers_test/: CMakeLists.txt  key_transformers_test.cpp
tests/lib_test/: CMakeLists.txt  interface.hpp  interface.ixx  lib_test.cpp
tests/mock_json_test/: CMakeLists.txt  mock_json_test.cpp
tests/module_test/: CMakeLists.txt  json_module_test.cpp
tests/msgpack_test/: CMakeLists.txt  msgpack_test.cpp
tests/mustache_test/: CMakeLists.txt  mustache_test.cpp
tests/networking_tests/: CMakeLists.txt
tests/read_test/: main.cpp  (+1 more)
(+1274 files in other folders)
